--- a/src/main/docs/guide/beanPostProcessor.adoc
+++ b/src/main/docs/guide/beanPostProcessor.adoc
@@ -1,4 +1,4 @@
-The link:{api}/io/micronaut/spring/beans/MicronautBeanProcessor.html[MicronautBeanProcessor]
+The link:{micronautspringapi}/io/micronaut/spring/beans/MicronautBeanProcessor.html[MicronautBeanProcessor]
 class is a `BeanFactoryPostProcessor` which will add Micronaut beans to a
 Spring Application Context.  An instance of `MicronautBeanProcessor` should
 be added to the Spring Application Context.  `MicronautBeanProcessor` requires
