--- a/src/main/docs/guide/springToMicronaut/springBoot.adoc
+++ b/src/main/docs/guide/springToMicronaut/springBoot.adoc
@@ -23,39 +23,39 @@ With the above dependencies in place the following Spring Boot specific annotati
 |Spring Boot Annotation|Target Annotation|Notes
 
 |link:{springbootapi}/org/springframework/boot/context/properties/ConfigurationProperties.html[@ConfigurationProperties]
-|link:{micronautapi}/io/micronaut/context/annotation/ConfigurationProperties.html[@ConfigurationProperties]
+|link:{micronautapi}context/annotation/ConfigurationProperties.html[@ConfigurationProperties]
 | Example `@ConfigurationProperties("foo.bar")`
 
-|link:{springbootapi}/org/springframework/boot/autoconfigure/condition/ConditionalOnBean.html.html[@ConditionalOnBean]
-|link:{micronautapi}/io/micronaut/context/annotation/Requires.html[@Requires]
+|link:{springbootapi}/org/springframework/boot/autoconfigure/condition/ConditionalOnBean.html[@ConditionalOnBean]
+|link:{micronautapi}context/annotation/Requires.html[@Requires]
 | Maps to `@Requires(beans=Foo.class)`
 
-|link:{springbootapi}/org/springframework/boot/autoconfigure/condition/ConditionalOnClass.html.html[@ConditionalOnClass]
-|link:{micronautapi}/io/micronaut/context/annotation/Requires.html[@Requires]
+|link:{springbootapi}/org/springframework/boot/autoconfigure/condition/ConditionalOnClass.html[@ConditionalOnClass]
+|link:{micronautapi}context/annotation/Requires.html[@Requires]
 | Maps to `@Requires(classes=Foo.class)`
 
-|link:{springbootapi}/org/springframework/boot/autoconfigure/condition/ConditionalOnMissingBean.html.html[@ConditionalOnMissingBean]
-|link:{micronautapi}/io/micronaut/context/annotation/Requires.html[@Requires]
+|link:{springbootapi}/org/springframework/boot/autoconfigure/condition/ConditionalOnMissingBean.html[@ConditionalOnMissingBean]
+|link:{micronautapi}context/annotation/Requires.html[@Requires]
 | Maps to `@Requires(missingBeans=Foo.class)`
 
-|link:{springbootapi}/org/springframework/boot/autoconfigure/condition/ConditionalOnMissingClass.html.html[@ConditionalOnMissingClass]
-|link:{micronautapi}/io/micronaut/context/annotation/Requires.html[@Requires]
+|link:{springbootapi}/org/springframework/boot/autoconfigure/condition/ConditionalOnMissingClass.html[@ConditionalOnMissingClass]
+|link:{micronautapi}context/annotation/Requires.html[@Requires]
 | Maps to `@Requires(missing=Foo.class)`
 
-|link:{springbootapi}/org/springframework/boot/autoconfigure/condition/ConditionalOnNotWebApplication.html.html[@ConditionalOnNotWebApplication]
-|link:{micronautapi}/io/micronaut/context/annotation/Requires.html[@Requires]
+|link:{springbootapi}/org/springframework/boot/autoconfigure/condition/ConditionalOnNotWebApplication.html[@ConditionalOnNotWebApplication]
+|link:{micronautapi}context/annotation/Requires.html[@Requires]
 | Maps to `@Requires(missingBeans=EmbeddedServer.class)`
 
-|link:{springbootapi}/org/springframework/boot/autoconfigure/condition/ConditionalOnProperty.html.html[@ConditionalOnProperty]
-|link:{micronautapi}/io/micronaut/context/annotation/Requires.html[@Requires]
+|link:{springbootapi}/org/springframework/boot/autoconfigure/condition/ConditionalOnProperty.html[@ConditionalOnProperty]
+|link:{micronautapi}context/annotation/Requires.html[@Requires]
 | Maps to `@Requires(property="foo.bar")`
 
-|link:{springbootapi}/org/springframework/boot/autoconfigure/condition/ConditionalOnSingleCandidate.html.html[@ConditionalOnSingleCandidate]
+|link:{springbootapi}/org/springframework/boot/autoconfigure/condition/ConditionalOnSingleCandidate.html[@ConditionalOnSingleCandidate]
 |`@RequiresSingleCandidateCondition`
 | Maps to `@RequiresSingleCandidateCondition(Foo.class)`
 
-|link:{springbootapi}/org/springframework/boot/autoconfigure/condition/ConditionalOnWebApplication.html.html[@ConditionalOnWebApplication]
-|link:{micronautapi}/io/micronaut/context/annotation/Requires.html[@Requires]
+|link:{springbootapi}/org/springframework/boot/autoconfigure/condition/ConditionalOnWebApplication.html[@ConditionalOnWebApplication]
+|link:{micronautapi}context/annotation/Requires.html[@Requires]
 | Maps to `@Requires(beans=EmbeddedServer.class)`
 
 |===
@@ -70,24 +70,24 @@ In addition the following Spring Boot Actuator annotations are supported:
 |Spring Actuator Boot Annotation|Target Annotation|Notes
 
 |link:{springbootapi}/org/springframework/boot/actuate/endpoint/annotation/Endpoint.html[@Endpoint]
-|link:{micronautapi}/io/micronaut/management/endpoint/annotation/Endpoint.html[@Endpoint]
+|link:{micronautapi}management/endpoint/annotation/Endpoint.html[@Endpoint]
 | Example `@Endpoint("features")`
 
 
 |link:{springbootapi}/org/springframework/boot/actuate/endpoint/annotation/ReadOperation.html[@ReadOperation]
-|link:{micronautapi}/io/micronaut/management/endpoint/annotation/Read.html[@Read]
+|link:{micronautapi}management/endpoint/annotation/Read.html[@Read]
 | Example `@ReadOperation`
 
 |link:{springbootapi}/org/springframework/boot/actuate/endpoint/annotation/WriteOperation.html[@WriteOperation]
-|link:{micronautapi}/io/micronaut/management/endpoint/annotation/Write.html[@Write]
+|link:{micronautapi}management/endpoint/annotation/Write.html[@Write]
 | Example `@WriteOperation`
 
 |link:{springbootapi}/org/springframework/boot/actuate/endpoint/annotation/DeleteOperation.html[@DeleteOperation]
-|link:{micronautapi}/io/micronaut/management/endpoint/annotation/Delete.html[@Delete]
+|link:{micronautapi}management/endpoint/annotation/Delete.html[@Delete]
 | Example `@DeleteOperation`
 
 |link:{springbootapi}/org/springframework/boot/actuate/endpoint/annotation/Selector.html[@Selector]
-|link:{micronautapi}/io/micronaut/management/endpoint/annotation/Selector.html[@Selector]
+|link:{micronautapi}management/endpoint/annotation/Selector.html[@Selector]
 | Example `@Selector`
 
 |===
