--- a/src/main/docs/guide/springToMicronaut/springToMicronautStart.adoc
+++ b/src/main/docs/guide/springToMicronaut/springToMicronautStart.adoc
@@ -1,35 +1,3 @@
-Micronaut 1.0.1 or above is required and the following is a minimal build to get this working for Spring (a non-web application):
+For a build configuration example for Gradle or Maven, see the example project that is part of the guide https://guides.micronaut.io/latest/micronaut-spring-boot.html[Run a Spring Boot Application as a Micronaut Application].
 
-[source,groovy,subs="attributes"]
-----
-plugins {
-    id "java"
-    id "org.springframework.boot" version "2.1.0.RELEASE"
-    id "io.spring.dependency-management" version "1.0.6.RELEASE"
-    id "net.ltgt.apt" version "0.19"                    // for Java and Groovy applications
-    id "org.jetbrains.kotlin:kapt" version "1.2.61"     // for Kotlin applications
-}
 
-dependencies {
-    // for Java applications
-    annotationProcessor "io.micronaut:micronaut-inject-java:{micronautVersion}"
-    annotationProcessor "io.micronaut:micronaut-validation:{micronautVersion}"
-    annotationProcessor "io.micronaut.spring:micronaut-spring-annotation:{version}"
-
-    // for Kotlin applications
-    kapt "io.micronaut:micronaut-inject-java:{micronautVersion}"
-    kapt "io.micronaut:micronaut-validation:{micronautVersion}"
-    kapt "io.micronaut.spring:micronaut-spring-annotation:{version}"
-    
-    // for Groovy applications
-    compileOnly "io.micronaut:micronaut-inject-groovy:$micronautVersion"
-    compileOnly "io.micronaut:micronaut-validation:$micronautVersion"
-    compileOnly "io.micronaut.spring:micronaut-spring-annotation:$micronautSpringVersion"
-
-    compile "io.micronaut:micronaut-inject:{micronautVersion}"
-    compile("org.springframework.boot:spring-boot-starter")
-    ...
-}
-----
-
-NOTE: If you are only going to reference Spring annotations and not Spring classes or interfaces then `org.springframework.boot:spring-boot-starter` can be `compileOnly`
